--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./src/styles/style.css" />
   </head>
   <body>
     <main>
@@ -14,6 +14,6 @@
         <button id="menu-button">Acessar menu</button>
       </div>
     </main>
-    <script src="./script.js"></script>
+    <script src="./src/scripts/script.js"></script>
   </body>
 </html>
