update: criação de todo list dinâmica

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <main>
       <div class="todo-list-container">
         <h1>Todo List</h1>
+        <form id="form-id" class="form-add">
+          <input
+            type="text"
+            name="tarefa"
+            id="input-add"
+            class="input-add"
+            placeholder="Adicione uma tarefa"
+          />
+          <button type="submit" id="button-add">Adicionar</button>
+        </form>
         <ul id="todo-list"></ul>
         <button id="menu-button">Acessar menu</button>
       </div>
